src/test/deca/codegen/invalid/divideOverflow.deca
{
    float a= 100000000000000000000000000000000000000.0; //10^38
    float b= 0.1;

    float f = a/b;
}
//ERROR Error : arithmetic overflow.
